<resources>
    <string name="app_name">Bilinguo</string>

    <string name="btn_join">Join</string>
    <string name="txt_info">Insert Word</string>
    <string name="txt_info_fav">Favourite</string>
    <string name="txt_en">English</string>
    <string name="txt_es">Spanish</string>
    <string name="favourite">Favourite</string>
    <string name="content_description_favourite">Favourite words</string>
    <string name="conjugation">Conjugations</string>
    <string name="content_description_conjugation">List of conjugations word</string>
    <string name="more">More</string>
    <string name="content_description_more">More options</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="password_error">Invalid Password</string>
    <string name="user_error">Invalid User</string>
    <string name="btn_translate">Translate</string>
    <string name="content_description_translate">Translate word</string>
    <string name="table_c1">Pronouns</string>
    <string name="table_c2">Verb Simple</string>
    <string name="table_c3">Verb Continuous</string>
    <string name="table_prou_f1">I / Yo</string>
    <string name="table_prou_f2">You / Tú</string>
    <string name="table_prou_f3">He, She, It /\nÉl, Ella, Eso</string>
    <string name="table_prou_f4">We / Nosotros</string>
    <string name="table_prou_f5">You / Ustedes</string>
    <string name="detail_fav">Detail word</string>
    <string name="detail_trasl">Detail word translate</string>
    <string name="to_do_fav">Favorite word save</string>
    <string name="to_do_trasl">Translate word save</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_create_user_name">Insert User Name</string>
    <string name="txt_create_user">Insert User Email</string>
    <string name="txt_create_password">Insert Password</string>
    <string name="btn_sing_up">Sing up</string>
    <string name="txt_register_form">Register Form</string>


</resources>