<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favourite"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/favourite"
        android:contentDescription="@string/content_description_favourite"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/conjugation"
        android:icon="@drawable/ic_baseline_article_24"
        android:title="@string/conjugation"
        android:contentDescription="@string/content_description_conjugation"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/more"
        android:title="@string/more"
        android:contentDescription="@string/content_description_more"
        app:showAsAction="never"
        />
</menu>